# k-engine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
_docs/: _kengine.md  android_issues.md  archtecture.drawio  building.md  devlog.md  documentation.md  features.md  journey.md  k-engine-classes.drawio  kengine.md  kge-perfomance-benchmark.md  mesh.md  opengl.md  perfomance.md  rendering_system.md  win32_issues.md
assets/: chicken.png.KRAW  cube.kraw  moeda.png.KRAW  plane.kraw  torus.kraw
core/: CMakeLists.txt
core/inc/: ge.h  geapiwrapper.h  geaux.h  geeventhandler.h  geimage.h  gemath.h  gemodel.h  geobject.h  geprofile.h  gerenderingsystem.h  getimehandler.h  getimer.h  geversion.h  gewinapiwrapper.h  gewindow.h  keaux.h  kecamera.h  keconstants.h  kecore.h  keentity.h  keeventhandler.h  keglwrapper.h  keimage.h  kelight.h  kemath.h  kemesh.h  kemodel.h  keobject.h  keprofile.h  keraw.h  kerenderingsystem.h  keshader.h  ketimehandler.h  ketimer.h  keutils.h  keversion.h  kewinapiwrapper.h  kewindow.h
core/src/: ge.cpp  geimage.cpp  gemath.cpp  gemodel.cpp  geprofile.cpp  gerenderingsystem.cpp  getimehandler.cpp  getimer.cpp  gewinapiwrapper.cpp  gewindow.cpp  kecamera.cpp  kecore.cpp  keentity.cpp  keeventhandler.cpp  keglwrapper.cpp  keimage.cpp  kelight.cpp  kemath.cpp  kemesh.cpp  kemodel.cpp  keobject.cpp  keprofile.cpp  keraw.cpp  kerenderingsystem.cpp  keshader.cpp  ketimehandler.cpp  ketimer.cpp  keutils.cpp  kewinapiwrapper.cpp  kewindow.cpp
demo/: CMakeLists.txt  demo.cpp  demo.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  simple3dcube.cpp  temp.cpp
demos/: blending.cpp  demo1.cpp  sala3d.cpp  texture.cpp  vbo_demo.cpp  win32demo.cpp
engine/: CMakeLists.txt  android_api_wrapper.cpp  camera.cpp  core.cpp  gl_wrapper.cpp  k_math.cpp  libx_api_wrapper.cpp  mesh.cpp  profile.cpp  rendering_system.cpp  timer.cpp  win32_api_wrapper.cpp
engine/include/: camera.hpp  core.hpp  events_callback.hpp  gl_wrapper.hpp  k_constants.hpp  k_math.hpp  k_version.hpp  logger.hpp  mesh.hpp  os_api_wrapper.hpp  profile.hpp  rendering_system.hpp  timer.hpp
game/: CMakeLists.txt  game.cpp  game.h  game_constants.h  main.cpp  splash.cpp  splash.h
inc/: ge.h
shaders/: fs_example.frag  gouraud.frag  gouraud.vert  main.frag  main.vert  main_fragment_shader.frag  main_vert.vert  main_vertex_shader.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  prim.frag  prim.vert  prim_frag.frag  prim_vert.vert  spotlightfrag.frag  spotlightshader.vert  teste.frag  teste.vert  vs_example.vert
src/: ge.cpp
test/: glxteste.cpp  log.txt
tests/: CMakeLists.txt  main_tests.cpp  math_test.cpp  mesh_test.cpp  tests.md
third/imgui-1.91.8/: CMakeLists.txt
third/imgui-1.91.8/backends/: imgui_impl_win32.cpp
